feature(input validations): implement user signup and login validation functionality - Implement User sign up input validations. - Implement User sign in input validations. - Integrate test for sign up input validations. - Integrate test for sign in input validations. [Finishes #159987729]
